--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
         function loadPage(){
 
             $.ajax({
-                url: '/jsonTest/'+paramName+'.json',
+                url: './json/'+paramName+'.json',
                 dataType : 'json',
                 beforeSend : function(){
                     $('body').append('<div id="loading" style="width:100%;height:100%;position:absolute;top:0;left:0;z-index:100;background:rgba(255,255,255,0.7)"><span style="position:absolute;top:50%;left:50%;width:100px;height:30px;font-size:12px;line-height:30px;margin:-15px 0 0 -50px;text-align:center;">Loading...</span></div>')
