--- a/public/storeList.html
+++ b/public/storeList.html
@@ -165,6 +165,47 @@
             #wrap .store_list li .phone{
                 color:blue;
             }
+
+            #wrap .filter{
+                height: auto;
+            }
+
+            #wrap .filter .selecbox_custom{
+                width: 100%;
+                height: 40px;
+                margin-bottom: 10px;
+            }
+
+            #wrap .filter .selecbox_custom a{
+                width: 100%;
+                height: 40px;
+                padding-top: 10px;
+                padding-left: 10px;
+                box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+            }
+
+            #wrap .filter .selecbox_custom select{
+                height: 100%;
+            }
+
+            #wrap .filter .search{
+                width: 100%;
+                position: relative;
+                top: 0;
+                left: 0;
+                box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+            }
+
+            #wrap .filter .search input{
+                width: 100%;
+                height: 40px;
+                list-style: 40px;
+                box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                border-width: 0;
+            }
         }
 
     </style>
@@ -186,12 +227,20 @@
 
         (function(){
             paramName = window.location.href.split('?');
+            if(paramName.length <= 1){
+                loadPage('매장 데이터가 없습니다.');
+            }else{
             paramName = paramName[paramName.length-1];
+                loadPage();
+            }
 
-            loadPage();
         })();
 
-        function loadPage(){
+        function loadPage(msg){
+            if(msg !== undefined){
+                $('#wrap').html('<div class="nodata">'+msg+'</div>');
+                return;
+            }
 
             $.ajax({
                 url: '/jsonTest/'+paramName+'.json',
@@ -219,6 +268,7 @@
 
                 },
                 error:function(e){
+                    $('#wrap').html('<div class="nodata">데이터를 로드 할 수 없습니다.</div>');
                     $('#loading').remove();
                 }
             });
@@ -229,7 +279,7 @@
 
             var htmlString = '<h1>'+title+'</h1>';
             htmlString += '<div class="filter">';
-            if(categoryList.length > 2){
+            if(categoryList.length >= 2){
                 htmlString += '    <div class="selecbox_custom">';
                 htmlString += '    <a href="javascript:void(0)"><strong>'+currentCityName+'</strong><span class="spt_bg"></span></a>';
                 htmlString += '        <select name="selectCity" id="selectCity">';
@@ -243,7 +293,7 @@
                 htmlString += '        </select>';
                 htmlString += '    </div>';
             }
-            htmlString += '    <div class="search"><input type="text" id="search_box"/></div>';
+            htmlString += '    <div class="search"><input type="text" id="search_box" placeholder="주소 검색"/></div>';
             htmlString += '</div>'
             htmlString += '<div id="storeList"></div>';
 
@@ -281,13 +331,7 @@
         }
 
         function initStoreListByCityName(cityName){
-            if(cityName == 'all'){
-                var data = getAllAddress();
-            }else{
-                var data = cityObj[cityName];
-            }
-
-
+            var data = cityObj[cityName];
             renderStore(data);
         }
 
@@ -312,7 +356,7 @@
         (function(){
             searchModule = {
                 init : function(keyword){
-                    var allData = getAllAddress();
+                    var allData = cityObj['all'];
                     var resultArray = [];
 
                     function searchInit(keyword){
@@ -340,15 +384,17 @@
                                     newArray.push({
                                         name :nameKeyword,
                                         address : addrKeyword,
-                                        map : allData[i].map,
                                         phone : allData[i].phone
                                     });
+
+                                    if(allData[i].map){
+                                        newArray[newArray.length-1].map = allData[i].map;
+                                    }
                                 }
                             }
                         }
 
 
-                        console.log(newArray);
                         return newArray;
                     }
                     /* searchInit function END */
